--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -88,9 +88,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\GoogleSheetConnector.cs" />
     <Compile Include="DataAccess\IDataConnection.cs" />
     <Compile Include="DataAccess\MasterSheetConnector.cs" />
-    <Compile Include="DataAccess\IGoogleSheetConnection.cs" />
     <Compile Include="DataAccess\SQLConnector.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="Models\DimensionedQuantityModel.cs" />
@@ -98,8 +98,7 @@
     <Compile Include="Models\Interfaces\IDatabaseObjectModel.cs" />
     <Compile Include="Models\Interfaces\ITimeboundObject.cs" />
     <Compile Include="Models\UnitModel.cs" />
-    <Compile Include="DataAccess\GoogleSheetsConnector.cs" />
-    <Compile Include="Utilities\ConnectionHelper.cs" />
+    <Compile Include="DataAccess\GoogleSheet.cs" />
     <Compile Include="Models\AnalysisModel.cs" />
     <Compile Include="Models\FieldModel.cs" />
     <Compile Include="Models\NutrientModel.cs" />
