--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -90,7 +90,7 @@
   <ItemGroup>
     <Compile Include="DataAccess\GoogleSheetConnector.cs" />
     <Compile Include="DataAccess\IDataConnection.cs" />
-    <Compile Include="DataAccess\MasterSheetConnector.cs" />
+    <Compile Include="DataAccess\MasterSheet.cs" />
     <Compile Include="DataAccess\SQLConnector.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="Models\DimensionedQuantityModel.cs" />
