--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -88,15 +88,25 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\Factory.cs" />
     <Compile Include="DataAccess\GoogleSheetConnector.cs" />
-    <Compile Include="DataAccess\IDataConnection.cs" />
-    <Compile Include="DataAccess\MasterSheet.cs" />
+    <Compile Include="DataAccess\Interfaces\IDataConnection.cs" />
     <Compile Include="DataAccess\SQLConnector.cs" />
+    <Compile Include="Models\Interfaces\IDimensionedQuantityTypeModel.cs" />
+    <Compile Include="DataAccess\Interfaces\IGoogleSheet.cs" />
+    <Compile Include="DataAccess\MasterSheet.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="Models\DimensionedQuantityModel.cs" />
     <Compile Include="Models\DimensionedQuantityTypeModel.cs" />
+    <Compile Include="Models\Interfaces\IAnalysisModel.cs" />
+    <Compile Include="Models\Interfaces\IDimensionedQuantityModel.cs" />
+    <Compile Include="Models\Interfaces\IFieldModel.cs" />
     <Compile Include="Models\Interfaces\IDatabaseObjectModel.cs" />
+    <Compile Include="Models\Interfaces\IRotationModel.cs" />
     <Compile Include="Models\Interfaces\ITimeboundObject.cs" />
+    <Compile Include="Models\Interfaces\INutrientModel.cs" />
+    <Compile Include="Factories\ModelFactory.cs" />
+    <Compile Include="Models\Interfaces\IUnitModel.cs" />
     <Compile Include="Models\UnitModel.cs" />
     <Compile Include="DataAccess\GoogleSheet.cs" />
     <Compile Include="Models\AnalysisModel.cs" />
