--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=6.1.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.6.1.0\lib\netstandard2.0\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\SMISoils\SMISoilLibrary\packages\Dapper.2.0.78\lib\net461\Dapper.dll</HintPath>
     </Reference>
@@ -52,10 +55,16 @@
     <Reference Include="Google.Apis.Sheets.v4, Version=1.49.0.2168, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Apis.Sheets.v4.1.49.0.2168\lib\net45\Google.Apis.Sheets.v4.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.ConfigurationManager, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Configuration.ConfigurationManager.5.0.0\lib\net461\System.Configuration.ConfigurationManager.dll</HintPath>
@@ -65,8 +74,21 @@
     <Reference Include="System.Data.SqlClient, Version=4.6.1.2, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SqlClient.4.8.2\lib\net461\System.Data.SqlClient.dll</HintPath>
     </Reference>
+    <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.7.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Security" />
     <Reference Include="System.Security.AccessControl, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.AccessControl.5.0.0\lib\net461\System.Security.AccessControl.dll</HintPath>
@@ -78,6 +100,9 @@
       <HintPath>..\packages\System.Security.Principal.Windows.5.0.0\lib\net461\System.Security.Principal.Windows.dll</HintPath>
     </Reference>
     <Reference Include="System.ServiceProcess" />
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -88,27 +113,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataAccess\Factory.cs" />
+    <Compile Include="DataAccess\Interfaces\IMasterSheet.cs" />
     <Compile Include="DataAccess\GoogleSheetConnector.cs" />
     <Compile Include="DataAccess\Interfaces\IDataConnection.cs" />
     <Compile Include="DataAccess\SQLConnector.cs" />
-    <Compile Include="Models\Interfaces\IDimensionedQuantityTypeModel.cs" />
-    <Compile Include="DataAccess\Interfaces\IGoogleSheet.cs" />
+    <Compile Include="Exceptions\GoogleSheetUpdateException.cs" />
+    <Compile Include="DataAccess\Interfaces\IGoogleSheetConnector.cs" />
     <Compile Include="DataAccess\MasterSheet.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="Models\DimensionedQuantityModel.cs" />
     <Compile Include="Models\DimensionedQuantityTypeModel.cs" />
-    <Compile Include="Models\Interfaces\IAnalysisModel.cs" />
-    <Compile Include="Models\Interfaces\IDimensionedQuantityModel.cs" />
-    <Compile Include="Models\Interfaces\IFieldModel.cs" />
-    <Compile Include="Models\Interfaces\IDatabaseObjectModel.cs" />
-    <Compile Include="Models\Interfaces\IRotationModel.cs" />
-    <Compile Include="Models\Interfaces\ITimeboundObject.cs" />
-    <Compile Include="Models\Interfaces\INutrientModel.cs" />
-    <Compile Include="Factories\ModelFactory.cs" />
-    <Compile Include="Models\Interfaces\IUnitModel.cs" />
     <Compile Include="Models\UnitModel.cs" />
-    <Compile Include="DataAccess\GoogleSheet.cs" />
     <Compile Include="Models\AnalysisModel.cs" />
     <Compile Include="Models\FieldModel.cs" />
     <Compile Include="Models\NutrientModel.cs" />
@@ -116,15 +131,21 @@
     <Compile Include="Models\RotationModel.cs" />
     <Compile Include="Models\SoilSampleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ContainerConfig.cs" />
     <Compile Include="Utilities\ICSVProcessor.cs" />
+    <Compile Include="Utilities\IMasterSheetProcessor.cs" />
     <Compile Include="Utilities\MasterSheetProcessor.cs" />
-    <Compile Include="Utilities\SoilSampleProcessor.cs" />
+    <Compile Include="Utilities\SoilSamples\ISoilSampleProcessor.cs" />
+    <Compile Include="Utilities\SoilSamples\SoilSampleColumnProcessor.cs" />
+    <Compile Include="Utilities\SoilSamples\SoilSampleProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="credentials.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
