--- a/SoilApp/SoilLibrary/packages.config
+++ b/SoilApp/SoilLibrary/packages.config
@@ -1,14 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="6.1.0" targetFramework="net472" />
   <package id="Dapper" version="2.0.78" targetFramework="net472" />
   <package id="Google.Apis" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Sheets.v4" version="1.49.0.2168" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
 </packages>
