Create analysis form working
Some basic validations and error handling done. Minimum viable product level.

--- a/SoilApp/SMISoilUI/App.config
+++ b/SoilApp/SMISoilUI/App.config
@@ -4,7 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-		<add name="Soil" connectionString="Server=localhost; Database=SoilTest;Trusted_Connection=true" providerName="System.Data.SqlClient" />
+		<add name="SoilTest" connectionString="Server=localhost; Database=SoilTest;Trusted_Connection=true" providerName="System.Data.SqlClient" />
+		<add name="Soil" connectionString="Server=localhost; Database=Soil;Trusted_Connection=true" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
