--- a/SoilApp/SoilLibrary/packages.config
+++ b/SoilApp/SoilLibrary/packages.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.78" targetFramework="net472" />
+  <package id="EPPlus" version="5.5.1" targetFramework="net472" />
   <package id="Google.Apis" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.49.0" targetFramework="net472" />
   <package id="Google.Apis.Sheets.v4" version="1.49.0.2168" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.3.6" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
