--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -131,6 +131,7 @@
     <Compile Include="DataAccess\MasterSheet.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="Models\AnalysisNutrientModel.cs" />
+    <Compile Include="Models\SoilSampleIntentionsModel.cs" />
     <Compile Include="Models\FilteredFieldNutrientModel.cs" />
     <Compile Include="Models\NutrientModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
@@ -145,12 +146,19 @@
     <Compile Include="Utilities\ExcelWriter.cs" />
     <Compile Include="Utilities\FileOutputUtil.cs" />
     <Compile Include="Utilities\ICSVProcessor.cs" />
-    <Compile Include="Utilities\IMasterSheetProcessor.cs" />
-    <Compile Include="Utilities\MasterSheetColumnProcessor.cs" />
-    <Compile Include="Utilities\MasterSheetProcessor.cs" />
+    <Compile Include="Utilities\GoogleSheetProcessor.cs" />
+    <Compile Include="Utilities\MasterSheetTab.cs" />
+    <Compile Include="Utilities\MasterSheet\AnalysesSheetProcessor.cs" />
+    <Compile Include="Utilities\MasterSheet\IMasterSheetProcessor.cs" />
+    <Compile Include="Utilities\MasterSheet\ProductsSheetProcessor.cs" />
+    <Compile Include="Utilities\MasterSheet\MasterSheetColumnProcessor.cs" />
+    <Compile Include="Utilities\MasterSheet\MasterSheetProcessor.cs" />
+    <Compile Include="Utilities\MasterSheet\NutrientsSheetProcessor.cs" />
+    <Compile Include="Utilities\MasterSheet\AnalysesSheetColumnProcessor.cs" />
     <Compile Include="Utilities\SoilSamples\ISoilSampleProcessor.cs" />
     <Compile Include="Utilities\SoilSamples\SoilSampleColumnProcessor.cs" />
     <Compile Include="Utilities\SoilSamples\SoilSampleProcessor.cs" />
+    <Compile Include="Utilities\UnitsSheetProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
