--- a/SoilApp/SMISoilUI/App.config
+++ b/SoilApp/SMISoilUI/App.config
@@ -6,6 +6,8 @@
 	<connectionStrings>
 		<add name="SoilTest" connectionString="Server=localhost; Database=SoilTest;Trusted_Connection=true" providerName="System.Data.SqlClient" />
 		<add name="Soil" connectionString="Server=localhost; Database=Soil;Trusted_Connection=true" providerName="System.Data.SqlClient" />
+		<add name ="MasterSheetProduction" connectionString="1AUMOHvJnfGT5Ve1Ep-ECslC9bhj8sP0DAI64CmQ-iWw"/>
+		<add name ="MasterSheetTest" connectionString="1EeRD0YlDFCiT_ELfKyyW-yEP46gZCQes0QBOqXFJTck"/>
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
