--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -131,6 +131,7 @@
     <Compile Include="DataAccess\MasterSheet.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="Models\AnalysisNutrientModel.cs" />
+    <Compile Include="Models\OperationNutrientModel.cs" />
     <Compile Include="Models\SoilSampleIntentionsModel.cs" />
     <Compile Include="Models\FilteredFieldNutrientModel.cs" />
     <Compile Include="Models\NutrientModel.cs" />
@@ -155,6 +156,7 @@
     <Compile Include="Utilities\MasterSheet\MasterSheetProcessor.cs" />
     <Compile Include="Utilities\MasterSheet\NutrientsSheetProcessor.cs" />
     <Compile Include="Utilities\MasterSheet\AnalysesSheetColumnProcessor.cs" />
+    <Compile Include="Utilities\Operations\OperationSheetProcessor.cs" />
     <Compile Include="Utilities\SoilSamples\SoilSampleData.cs" />
     <Compile Include="Utilities\SoilSamples\ISoilSampleProcessor.cs" />
     <Compile Include="Utilities\SoilSamples\SoilSampleColumnProcessor.cs" />
