Operation import working
Operation creation is working. Next steps are getting field nutrients to update properly and updating the ledger to reflect as so

--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -156,7 +156,7 @@
     <Compile Include="Utilities\MasterSheet\MasterSheetProcessor.cs" />
     <Compile Include="Utilities\MasterSheet\NutrientsSheetProcessor.cs" />
     <Compile Include="Utilities\MasterSheet\AnalysesSheetColumnProcessor.cs" />
-    <Compile Include="Utilities\Operations\OperationSheet.cs" />
+    <Compile Include="DataAccess\OperationSheet.cs" />
     <Compile Include="Utilities\Operations\OperationSheetProcessor.cs" />
     <Compile Include="Utilities\SoilSamples\SoilSampleData.cs" />
     <Compile Include="Utilities\SoilSamples\ISoilSampleProcessor.cs" />
