--- a/SoilApp/SoilLibrary/SoilLibrary.csproj
+++ b/SoilApp/SoilLibrary/SoilLibrary.csproj
@@ -131,6 +131,7 @@
     <Compile Include="DataAccess\MasterSheet.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="Models\AnalysisNutrientModel.cs" />
+    <Compile Include="Models\FieldNutrientModel.cs" />
     <Compile Include="Models\OperationNutrientModel.cs" />
     <Compile Include="Models\SoilSampleIntentionsModel.cs" />
     <Compile Include="Models\FilteredFieldNutrientModel.cs" />
