Fixed soil sample import

--- a/SoilApp/SMISoilUI/App.config
+++ b/SoilApp/SMISoilUI/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-		<add name="SoilTest" connectionString="Server=localhost; Database=SoilTest;Trusted_Connection=true" providerName="System.Data.SqlClient" />
-		<add name="Soil" connectionString="Server=localhost; Database=Soil;Trusted_Connection=true" providerName="System.Data.SqlClient" />
+    <add name="SoilTest" connectionString="Data Source=SMI-138\SQLEXPRESS;Initial Catalog=SoilTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="Soil" connectionString="Data Source=SMI-138\SQLEXPRESS;Initial Catalog=Soil;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
 		<add name ="MasterSheetProduction" connectionString="1AUMOHvJnfGT5Ve1Ep-ECslC9bhj8sP0DAI64CmQ-iWw"/>
 		<add name ="MasterSheetTest" connectionString="1EeRD0YlDFCiT_ELfKyyW-yEP46gZCQes0QBOqXFJTck"/>
 	</connectionStrings>
